--- a/package.json
+++ b/package.json
@@ -33,9 +33,13 @@
     "type": "git",
     "url": "https://github.com/plexus-space/ui.git"
   },
+  "dependencies": {
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
+  },
   "devDependencies": {
-    "@types/react": "^18.3.25",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@types/three": "^0.160.0",
     "typescript": "^5.4.5"
   }
