--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "cd playground && npm install && npm run build",
+  "buildCommand": "npm run build -w playground",
   "outputDirectory": "playground/.next",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./playground"
+  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./playground ./packages/components"
 }
