--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -27,7 +27,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@plexusui/components/*": ["../packages/components/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
