Fix Vercel ignoreCommand error
Remove ignoreCommand that was failing on initial commits.
Vercel will now build on every push, which is appropriate for this monorepo.

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,5 @@
   "buildCommand": "npm run build -w playground",
   "outputDirectory": "playground/.next",
   "installCommand": "npm install",
-  "framework": "nextjs",
-  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./playground ./packages/components"
+  "framework": "nextjs"
 }
