Fix Vercel output directory path
Set framework to null to prevent auto-detection.
Use explicit cd command for monorepo build.

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "npm run build -w playground",
+  "buildCommand": "cd playground && npm run build",
   "outputDirectory": "playground/.next",
   "installCommand": "npm install",
-  "framework": "nextjs"
+  "framework": null
 }
