--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "cd playground && npm run build",
+  "buildCommand": "npm --prefix playground run build",
   "outputDirectory": "playground/.next",
   "installCommand": "npm install",
   "framework": null
