--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/three": "^0.160.0",
+    "@webgpu/types": "^0.1.51",
     "typescript": "^5.4.5"
   }
 }
