--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
   "devDependencies": {
     "@webgpu/types": "^0.1.65",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "wgpu-matrix": "^3.4.0"
   }
 }
