--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -7,7 +7,8 @@
     "plexusui": "./dist/index.js"
   },
   "files": [
-    "dist"
+    "dist",
+    "../components/registry.json"
   ],
   "scripts": {
     "build": "tsc",
