--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -11,6 +11,7 @@
     "moduleResolution": "bundler",
     "target": "es2020",
     "lib": ["es2020", "dom", "dom.iterable"],
+    "types": ["@webgpu/types"],
     "skipLibCheck": true,
     "strict": true,
     "esModuleInterop": true,
