--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build:cli": "npm run build -w @plexusui/cli",
     "build:playground": "npm run build -w @plexusui/playground",
     "publish": "npm run build:cli && npm publish -w @plexusui/cli --access public",
-    "lint": "npm run lint -w @plexusui/playground"
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
+    "format": "biome format --write ."
   },
   "keywords": [
     "monorepo",
@@ -37,6 +39,7 @@
     "url": "https://github.com/plexus-space/ui.git"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.4",
     "@webgpu/types": "^0.1.65",
     "typescript": "^5.4.5"
   },
