--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@webgpu/types": "^0.1.65",
     "typescript": "^5.4.5"
   }
 }
