--- a/playground/package.json
+++ b/playground/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@webgpu/types": "^0.1.65",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "raw-loader": "^4.0.2",
