--- a/biome.json
+++ b/biome.json
@@ -11,8 +11,7 @@
       "node_modules",
       "dist",
       "build",
-      ".next",
-      "*.wgsl"
+      ".next"
     ]
   },
   "formatter": {
