--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,16 +1,16 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "composite": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "module": "ESNext",
-    "moduleResolution": "bundler",
     "target": "ES2022",
     "lib": ["ES2022"],
     "types": ["node"],
     "noEmit": false,
-    "resolveJsonModule": true
+    // CLI is executable, doesn't need DOM
+    "jsx": "react"
   },
-  "include": ["src/**/*", "../components/registry.json"],
+  "include": ["src/**/*", "src/registry/registry.json"],
   "exclude": ["node_modules", "dist"]
 }
