--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -1,26 +1,14 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": false,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
+    "composite": true,
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "jsx": "preserve",
-    "incremental": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitAny": false,
-    "strictNullChecks": false,
-    "strictFunctionTypes": false,
-    "strictBindCallApply": false,
-    "strictPropertyInitialization": false,
-    "noImplicitThis": false,
+    "noEmit": true,
+    "allowJs": true,
+
+    "strict": true,
+
     "plugins": [
       {
         "name": "next"
@@ -28,11 +16,17 @@
     ],
     "paths": {
       "@/*": ["./*"],
-      "@plexusui/components/*": ["../packages/components/*"],
-      "@plexusui/components-pro/*": ["../packages/components-pro/*"],
-      "@plexusui/hooks/*": ["../packages/hooks/*"]
+      "@plexusui/components/*": ["../packages/components/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": ["node_modules"],
+  "references": [
+    { "path": "../packages/components" }
+  ]
 }
