--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -5,9 +5,12 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "target": "ES2022",
+    "module": "ESNext",
+    "moduleResolution": "node",
     "lib": ["ES2022"],
     "types": ["node"],
     "noEmit": false,
+    "emitDeclarationOnly": false,
     // CLI is executable, doesn't need DOM
     "jsx": "react"
   },
