--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -7,7 +7,7 @@
     "jsx": "react-jsx",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "noEmit": false,
-    "types": ["react", "react-dom"]
+    "types": ["react", "react-dom", "@webgpu/types"]
   },
   "include": ["**/*.ts", "**/*.tsx", "registry.json"],
   "exclude": ["node_modules", "dist"]
