--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -19,15 +19,7 @@
       "@plexusui/components/*": ["../packages/components/*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    "components/**/*.js"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/**/*.js"],
   "exclude": ["node_modules"],
-  "references": [
-    { "path": "../packages/components" }
-  ]
+  "references": [{ "path": "../packages/components" }]
 }
