--- a/playground/package.json
+++ b/playground/package.json
@@ -9,8 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
     "class-variance-authority": "^0.7.1",
