--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -23,6 +23,7 @@
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
     "@types/three": "^0.181.0",
+    "react-error-boundary": "^6.0.0",
     "three": "^0.180.0"
   }
 }
