--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.4",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "socket.io-client": "^4.8.1"
   }
 }
