--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@plexusui/cli",
   "version": "0.0.23",
-  "description": "CLI for adding Plexus UI aerospace components to your project",
+  "description": "CLI for adding GPU-accelerated Plexus UI components to your project - built for robotics, medical devices, aerospace, and industrial IoT",
   "type": "module",
   "bin": {
     "plexusui": "./dist/index.js"
